# hpr-scratcher

./: README.md  flake.nix  pyproject.toml
hpr_scratcher/: __init__.py
nix/: flake.nix
